// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderNavigationItem should render an ActiveNavigationItem 1`] = `
<HeaderNavigationItem__StyledLink
  active={true}
  to="/augsburg/de"
>
  <HeaderNavigationItem__Circle>
    <img
      alt=""
      src="icon"
    />
  </HeaderNavigationItem__Circle>
  <div>
    Kategorien
  </div>
</HeaderNavigationItem__StyledLink>
`;

exports[`HeaderNavigationItem should render an InactiveNavigationItem 1`] = `
<HeaderNavigationItem__StyledLink
  active={false}
  data-tip="random tooltip"
  to="/augsburg/de"
>
  <HeaderNavigationItem__Circle>
    <img
      alt=""
      src="icon"
    />
  </HeaderNavigationItem__Circle>
  <div>
    Kategorien
  </div>
</HeaderNavigationItem__StyledLink>
`;
